Fix color wheel overlap issue with fixed navigation
modified: css/dxpr-theme.admin.themesettings.css
modified: scss/dxpr-theme.admin.themesettings.scss

--- a/scss/dxpr-theme.admin.themesettings.scss
+++ b/scss/dxpr-theme.admin.themesettings.scss
@@ -415,7 +415,7 @@ $textLight: rgba(86,86,86,.6);
   .color-placeholder {
     padding: 0 1.5rem;
     height: 0;
-    top: 90px;
+    top: 140px;
   }
   .color-palette {
     margin-top: 4rem;
